--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
 			<div id="branco">
 				<div id="comp">
 					<img src="images/pcs.png">
+				</div>
 					<div id="material">
 						<h1 id="mattext">MATERIAL TRAINEE 2017</h1>
+						<article id="text1"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."</b></article>
 					</div>
-				</div>
+			</div>
+			<div id="parte3">
+				<h1 align="center" id="titparte3">HTML 5 | CSS3 | JAVASCRIPT</h1>
+				<img src="images/html.png">
 			</div>
 
 	</body>
