--- a/index.html
+++ b/index.html
@@ -1,50 +1,132 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="Desafio trainee 2017.1">
-	<meta name="author" content="GTI Engenharia Jr"/>
-	<title>TraineeGTI</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="images/ico.png">
-</head>
-	<body>
-		<h1 align="center" id="aprenda">APRENDA A <br> DESENVOLVER COM A GTI JR.</h1>
-		<div align="center">
-		<a href="#"><div id="bot1"><b>HTML 5 + CSS3 + JS</b></div></a>
-		<a href="#"><div id="bot2"><b>Ruby On Rails</b></div></a>
-		</div>	
-			<div id="lat1"></div>
-			<div id="lat2"></div>
-			<div id="all">
-				<div id="nav">
-					<img id="logo" src="images/logo.png">
-					<div id="itens">
-						<ul id="ulmenu"><b>
-							<li><a href="#">Início</a></li>
-							<li id="categorias"><a href="#">Categorias</a></a></li>
-							<li id="blog"><a href="#">Blog</a></li>
-							<li id="membros"><a href="#">Membros</a></li>
-						</b></ul>
-					</div>
-				</div>
-				<img align="center" id="PCs" src="images/banner.jpg">
-			</div>
-			<div id="branco">
-				<div id="comp">
-					<img src="images/pcs.png">
-				</div>
-					<div id="material">
-						<h1 id="mattext">MATERIAL TRAINEE 2017</h1>
-						<article id="text1"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."</b></article>
-					</div>
-			</div>
-			<div id="parte3">
-				<h1 align="center" id="titparte3">HTML 5 | CSS3 | JAVASCRIPT</h1>
-				<img src="images/html.png">
-			</div>
+   <head>
+      <meta charset="utf-8">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum scale=1">
+      <meta name="description" content="Desafio trainee 2017.1">
+      <meta name="author" content="GTI Engenharia Jr"/>
+      <title>TraineeGTI</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="icon" href="images/ico.png">
+   </head>
+   <body>
+      <header>
 
-	</body>
-	</html>
+      <div class="container1">
+        <div class="top-header">
+        <div class="container">
+            <img class="logo" src="images/logo.png">
+
+            <nav>
+                  <ul class="ulmenu">
+                     <li><a href="#"><b>Início</b></a></li>
+                     <li><a href="#"><b>Categorias</b></a></li>
+                     <li><a href="#"><b>Blog</b></a></li>
+                     <li><a href="#"><b>Membros</b></a></li>
+                  </ul>
+            </nav>
+
+            </div>
+         </div>
+
+         <h1 class="header-title">APRENDA A <br> DESENVOLVER COM A GTI JR.</h1>
+         <div align="center">
+            <a href="#">
+                <button class="bot">HTML 5 + CSS3 + JS</button>
+            </a>
+            <a href="#">
+               <button class="bot">Ruby On Rail</button>
+            </a>
+
+         </div>
+            <div>
+               <section class="section1">
+                     <img class="imgsec1" src="images/pcs.png">
+                     <h1 class="material"><b>MATERIAL TRAINEE 2017</b></h1>
+                     <article class="artsec1">Lorem ipsum é um texto padrão em latim. Em documentos utilizados para testes, este tipo de texto é utilizado para evitar que as pessoas foquem a atenção no texto e se concentrem nos aspectos visuais. O lorem ipsum simula com razoável fidelidade um texto real, por possuir palavras de diversos tamanhos e sinais de pontuação, permitindo testar também a forma como o texto flui nas caixas e campos de formatação.</article>
+               </section>
+               <section class="section2">
+                  <h1 class="material2">HTML 5 | CSS3 | JAVASCRIPT</h1>
+                  <div class="card1">
+                     <img class="html" src="images/html.png">
+                     <article class="postado">HTML 5 - Introdução<br><b>Postado por: Patrick</b></article>
+                     <div class="info">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card2">
+                     <img class="html" src="images/html.png">
+                     <article class="postado">Lista de Livros<br><b>Postado por: Rayane</b></article>
+                     <div class="info">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card3">
+                     <img class="html-css" src="images/html-css.png">
+                     <article class="postado3">Criando um site do ZERO<br><b>Postado por: Adolfo</b></article>
+                     <div class="info-html-css">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card4">
+                     <img class="html" src="images/js.png">
+                     <article class="postado4">JavaScript - Introdução<br><b>Postado por: Simão</b></article>
+                     <div class="info">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>            
+                  </div>
+                  <button class="botvermais">VER +</button>
+               </section>
+
+
+               <section class="section2">
+                  <h1 class="material3">Ruby on Rails</h1>
+                  <div class="card5">
+                     <img class="ruby" src="images/ruby.png">
+                     <article class="postado">Ruby - Introdução<br><b>Postado por: Noleto</b></article>
+                     <div class="info-card-5-6">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card6">
+                     <img class="rails" src="images/rails.png">
+                     <article class="postado">RAILS 5 - Introdução<br><b>Postado por: Patrick</b></article>
+                     <div class="info-card-5-6">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card7">
+                     <img class="heroku" src="images/heroku.png">
+                     <article class="postado7">Fazendo deploy no heroku<br><b>Postado por: Eduardo</b></article>
+                     <div class="info-card7">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>
+                  </div>
+                  <div class="card8">
+                     <img class="html" src="images/rails.png">
+                     <article class="postado7">RAILS - GEMS importantes<br><b>Postado por: Simão</b></article>
+                     <div class="info-card8">
+                        <article class="postado2"><b>Postado dia 04/08/2017</b></article>
+                        <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
+                     </div>            
+                  </div>
+                  <button class="botvermais">VER +</button>
+               </section>
+
+      <footer align="center">Desenvolvido Por *Glauton Santos*</footer>
+            
+            </div>
+         </div>
+      </header>
+
+   </body>
+</html>
