--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
    <div>
       <section class="section1">
          <img class="imgsec1" src="images/pcs.png">
-         <h1 class="material"><b>MATERIAL TRAINEE 2017</b></h1>
-         <article class="artsec1">Lorem ipsum é um texto padrão em latim. Em documentos utilizados para testes, este tipo de texto é utilizado para evitar que as pessoas foquem a atenção no texto e se concentrem nos aspectos visuais. O lorem ipsum simula com razoável fidelidade um texto real, por possuir palavras de diversos tamanhos e sinais de pontuação, permitindo testar também a forma como o texto flui nas caixas e campos de formatação.</article>
+         <h1 align="center" class="material"><b>MATERIAL TRAINEE 2017</b></h1>
+         <div  class="div-artsec1">
+         <article align="justify">Lorem ipsum é um texto padrão em latim. Em documentos utilizados para testes, este tipo de texto é utilizado para evitar que as pessoas foquem a atenção no texto e se concentrem nos aspectos visuais. O lorem ipsum simula com razoável fidelidade um texto real, por possuir palavras de diversos tamanhos e sinais de pontuação, permitindo testar também a forma como o texto flui nas caixas e campos de formatação.</article>
+         </div>
+         <div class="branco"></div>
       </section>
       <section class="section2">
          <h1 class="material2">HTML 5 | CSS3 | JAVASCRIPT</h1>
+         <div class="cards-section2">
          <div class="card1">
             <img class="html" src="images/html.png">
             <article class="postado">HTML 5 - Introdução<br><b>Postado por: Patrick</b></article>
@@ -76,17 +80,20 @@
          <div class="card4">
             <img class="html" src="images/js.png">
             <article class="postado4">JavaScript - Introdução<br><b>Postado por: Simão</b></article>
-            <div class="info">
+            <div class="info-card4">
                <article class="postado2"><b>Postado dia 04/08/2017</b></article>
                <button class="bot-estudar"><b>ESTUDAR AGORA</b></button>
             </div>            
          </div>
          <button class="botvermais">VER +</button>
+         <div class="branco"></div>
+         </div>
       </section>
 
 
       <section class="section2">
          <h1 class="material3">Ruby on Rails</h1>
+         <div class="cards-section2">
          <div class="card5">
             <img class="ruby" src="images/ruby.png">
             <article class="postado">Ruby - Introdução<br><b>Postado por: Noleto</b></article>
@@ -120,6 +127,8 @@
             </div>            
          </div>
          <button class="botvermais">VER +</button>
+         <div class="branco"></div>
+         </div>
       </section>
       <footer align="center">Desenvolvido Por *Glauton Santos*</footer>
    </div>
