--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          </div>
       </div>
 
-      <h1 class="header-title">APRENDA A <br> DESENVOLVER COM A GTI JR.</h1>
+      <h1 class="header-title"><img class="comp-titulo" src="images/icone-header.png"> APRENDA A <br> DESENVOLVER COM A GTI JR.</h1>
       <div align="center">
          <a href="#">
            <button class="bot">HTML 5 + CSS3 + JS</button>
@@ -44,8 +44,8 @@
    <div>
       <section class="section1">
          <img class="imgsec1" src="images/pcs.png">
-         <h1 align="center" class="material"><b>MATERIAL TRAINEE 2017</b></h1>
          <div  class="div-artsec1">
+         <h1 align="center" class="material"><b>MATERIAL TRAINEE 2017</b></h1>
          <article align="justify">Lorem ipsum é um texto padrão em latim. Em documentos utilizados para testes, este tipo de texto é utilizado para evitar que as pessoas foquem a atenção no texto e se concentrem nos aspectos visuais. O lorem ipsum simula com razoável fidelidade um texto real, por possuir palavras de diversos tamanhos e sinais de pontuação, permitindo testar também a forma como o texto flui nas caixas e campos de formatação.</article>
          </div>
          <div class="branco"></div>
@@ -86,7 +86,7 @@
             </div>            
          </div>
          <button class="botvermais">VER +</button>
-         <div class="branco"></div>
+         <div align="center" class="branco"></div>
          </div>
       </section>
 
